@@ -1,5 +1,10 @@
 2010-06-10  Michael Hutchinson  <mhutchinson@novell.com>
 
+	* Mono.TextEditor.Tests/ViTests.cs: Add a test for deleting to
+	  line home/start/zero.
+
+2010-06-10  Michael Hutchinson  <mhutchinson@novell.com>
+
 	* MonoDevelop.CSharpBinding/FindMemberVisitorTests.cs: Track
 	  API spelling.
 
